<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">1_08_shopsie___e_commerce_app</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_archie">Archie</string>
  <string name="lbl_home_address">Home address</string>
  <string name="lbl_email_address">Email address</string>
  <string name="lbl_price_range2">Price range</string>
  <string name="lbl2">:</string>
  <string name="lbl_or_login_with">Or Login with</string>
  <string name="msg_don_t_have_an_account">Don\u2019t have an account? Register Now</string>
  <string name="lbl_first_name">First Name</string>
  <string name="msg_already_have_an">Already have an account? Login Now</string>
  <string name="msg_current_password">Current password</string>
  <string name="lbl_update_password">Update Password</string>
  <string name="msg_shoes_sandals">Shoes, sandals, etc.</string>
  <string name="lbl_light_dresses">Light dresses</string>
  <string name="lbl_new_password">New password</string>
  <string name="msg_enter_your_password">Enter your password</string>
  <string name="lbl_phone_number">Phone number</string>
  <string name="lbl_log_out">Log out</string>
  <string name="lbl_up_to">up to</string>
  <string name="lbl_edit">Edit</string>
  <string name="lbl_accessories">Accessories</string>
  <string name="msg_long_sleeve_t_shirt">Long Sleeve T-shirt</string>
  <string name="lbl_sliders2">Sliders</string>
  <string name="lbl_slippers">Slippers</string>
  <string name="lbl_style">Style:</string>
  <string name="msg_hello_register">Hello! Register to get started</string>
  <string name="lbl_gender2">Gender</string>
  <string name="lbl_login_now">Login Now</string>
  <string name="lbl_style2">Style</string>
  <string name="msg_olive_plain_dress">Olive plain dress</string>
  <string name="lbl_2021_shopsie">Ⓒ 2021 Shopsie</string>
  <string name="lbl_price_range">Price range:</string>
  <string name="lbl_last_name">Last Name</string>
  <string name="lbl_gender">Gender: </string>
  <string name="lbl_43_90">$43.90</string>
  <string name="msg_leave_your_email">Leave your email and get a discount</string>
  <string name="lbl_buy_it_now">Buy It Now</string>
  <string name="msg_add_another_address">Add Another Address</string>
  <string name="msg_shorts_in_yellow">shorts in Yellow</string>
  <string name="lbl_nike_slides">Nike Slides</string>
  <string name="lbl_sl_iders">Sl|iders</string>
  <string name="msg_evening_casual">Evening, casual, home</string>
  <string name="lbl_pay_111_80">Pay $111.80</string>
  <string name="msg_already_have_an2">Already have an account?</string>
  <string name="lbl_24_99">$ 24.99</string>
  <string name="lbl_long_sleeve_top">Long Sleeve Top</string>
  <string name="lbl_in_this_look">In This look</string>
  <string name="lbl_enter_address">Enter address</string>
  <string name="lbl_my_orders">My orders</string>
  <string name="lbl_password">Password</string>
  <string name="msg_archiecopeland_gmail_com">archiecopeland@gmail.com</string>
  <string name="lbl_los_angeles">Los Angeles</string>
  <string name="lbl_0000000">0000000</string>
  <string name="lbl_season_sale">SEASON SALE</string>
  <string name="lbl_address_1">Address 1</string>
  <string name="lbl_address_2">Address 2</string>
  <string name="lbl_account"> account?</string>
  <string name="msg_current_addresses">Current addresses</string>
  <string name="lbl_ts_cs">Ts&amp;Cs</string>
  <string name="lbl_city">City</string>
  <string name="lbl_60_off">60% Off</string>
  <string name="msg_enter_your_email">Enter your email</string>
  <string name="msg_saddle_shoulder">Saddle shoulder bag with hardware </string>
  <string name="lbl_111_80">$111.80</string>
  <string name="lbl_postal_code2">Postal code</string>
  <string name="lbl_13_99">$ 13.99</string>
  <string name="lbl_postal_code">Postal Code</string>
  <string name="msg_cotton_black_dress">Cotton black dress</string>
  <string name="lbl_get_20_off">Get 20% off</string>
  <string name="lbl_copeland">Copeland</string>
  <string name="lbl_female">Female</string>
  <string name="msg_print_maxi_dress">Print Maxi Dress</string>
  <string name="lbl_address_details">Address details</string>
  <string name="lbl_99_30">$99.30</string>
  <string name="lbl_change_password">Change password</string>
  <string name="lbl_amoy_st_592"> Amoy st, 592</string>
  <string name="msg_welcome_back_glad">Welcome back! Glad to see you, Again!</string>
  <string name="lbl_fall_2021">FALL 2021</string>
  <string name="msg_allentown_new_mexico">Allentown, New Mexico</string>
  <string name="msg_enter_phone_number">Enter phone number</string>
  <string name="lbl_12_50">$12.50</string>
  <string name="lbl_shopsie">Shopsie</string>
  <string name="lbl_save_edit">Save Edit</string>
  <string name="lbl_subscribe">Subscribe</string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_register">Register</string>
  <string name="lbl_up_to_60_off">up to 60% Off</string>
  <string name="lbl">: </string>
  <string name="lbl_my_cart">MY CART</string>
  <string name="msg_enter_postal_code">Enter postal code</string>
  <string name="msg_blue_pure_cotton">Blue Pure Cotton Relaxed Fit High-Rise Clean Look </string>
  <string name="lbl_product_details">PRODUCT DETAILS</string>
  <string name="lbl_don_t_have_an">Don\u2019t have an</string>
  <string name="lbl_partywear">Partywear</string>
  <string name="msg_privacy_cookies">Privacy &amp; Cookies</string>
  <string name="lbl_sub_total">SUB-TOTAL</string>
  <string name="lbl_email">Email</string>
  <string name="lbl_trending_now">Trending now</string>
  <string name="msg_raincoats_sweaters">Raincoats, sweaters, etc.</string>
  <string name="msg_recomended_looks">Recomended looks for you</string>
  <string name="lbl_archie_copeland">Archie Copeland</string>
  <string name="lbl_1">1</string>
  <string name="msg_women_blue_skinny">Women Blue Skinny Fit High-Rise Light Fade </string>
  <string name="lbl_add_to_cart">Add To Cart</string>
  <string name="msg_only_trusted_brands">Only trusted brands</string>
  <string name="lbl_shoes">Shoes</string>
  <string name="lbl_profile_info">Profile info</string>
  <string name="lbl_register_now">Register Now</string>
  <string name="lbl_shoes_on_heels">Shoes on heels</string>
  <string name="lbl_enter_your_city">Enter your city</string>
  <string name="lbl_new_arrival">NEW ARRIVAL</string>
  <string name="lbl_login">Login</string>
  <string name="lbl_qty">Qty: </string>
  <string name="lbl_dresses">Dresses</string>
  <string name="lbl_security">Security</string>
  <string name="msg_fit_high_rise_clean">Fit High-Rise Clean Look Stretchable Cropped Jeans</string>
  <string name="lbl_28_99">$ 28.99</string>
  <string name="lbl_20_99">$ 20.99</string>
  <string name="lbl_cart">Cart</string>
  <string name="lbl_clothing">clothing</string>
  <string name="lbl_all">All</string>
  <string name="msg_mini_dress_with">Mini dress with gather at the sides. Button fastening and slightly dropped shoulder line. Wide sleeves with gathered cuffs. Vertical panels and gather in combination with voluminous sleeves visually adjust the silhouette, making it more graceful</string>
  <string name="lbl_slip_dress">Slip Dress</string>
  <string name="lbl_orders">Orders</string>
  <string name="msg_the_best_way_to">The best way to style your life.</string>
  <string name="lbl_outerwear">Outerwear</string>
  <string name="lbl_explore">Explore</string>
  <string name="lbl_qty2">Qty:</string>
  <string name="lbl_leather_shoes">Leather shoes</string>
  <string name="msg_actual_categories">Actual categories</string>
</resources>
